tests/NormalTests/paczka1/small_fuzzy/45080560.err
Error in line 3: S614 A11 66,5
Error in line 13: Lh4wzS A11 94,3
